fixed spacing with css

--- a/src/index.css
+++ b/src/index.css
@@ -137,3 +137,7 @@
   background: rgba(255, 102, 0, 0.4);
   border-color: rgb(51, 102, 255);
 }
+
+.ninja-text {
+  margin-bottom: 15px;
+}
